[gd_scene load_steps=17 format=3 uid="uid://beq5eok0bjetm"]

[ext_resource type="Script" path="res://scripts/rain_fire.gd" id="1_agvli"]
[ext_resource type="Texture2D" uid="uid://c3w1gh8qcrbv1" path="res://assent/enemy/1/Explosion_1.png" id="1_u2dvb"]
[ext_resource type="Texture2D" uid="uid://dnn7c6su4jlwe" path="res://assent/enemy/1/Explosion_2.png" id="2_xtvo2"]
[ext_resource type="Texture2D" uid="uid://cmb07fo8tncf3" path="res://assent/enemy/1/Explosion_3.png" id="3_uavrr"]
[ext_resource type="Texture2D" uid="uid://d377xune7hu4l" path="res://assent/enemy/1/Explosion_4.png" id="4_j6qoe"]
[ext_resource type="Texture2D" uid="uid://bov38pmfnraed" path="res://assent/enemy/1/Explosion_5.png" id="5_u82sm"]
[ext_resource type="Texture2D" uid="uid://53lfgpdm33qo" path="res://assent/scenario/bubble.png" id="7_x15js"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jc1f"]
atlas = ExtResource("1_u2dvb")
region = Rect2(0, 0, 130, 660)

[sub_resource type="AtlasTexture" id="AtlasTexture_oarxu"]
atlas = ExtResource("2_xtvo2")
region = Rect2(0, 0, 130, 660)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kwji"]
atlas = ExtResource("3_uavrr")
region = Rect2(0, 0, 130, 660)

[sub_resource type="AtlasTexture" id="AtlasTexture_omian"]
atlas = ExtResource("4_j6qoe")
region = Rect2(0, 0, 130, 660)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm76j"]
atlas = ExtResource("5_u82sm")
region = Rect2(0, 0, 130, 660)

[sub_resource type="SpriteFrames" id="SpriteFrames_sy7en"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jc1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oarxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kwji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omian")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm76j")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ogwv"]
size = Vector2(675, 100)

[sub_resource type="Animation" id="Animation_i4uwx"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fire:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_make_rain"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("fire:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_invisible"
}, {
"args": [],
"method": &"_visible"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tk0dv"]
_data = {
"default": SubResource("Animation_i4uwx")
}

[node name="rain_fire" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 0
collision_mask = 9
monitoring = false
script = ExtResource("1_agvli")

[node name="fire" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(104, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire2" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(180, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire3" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(291, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire4" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(398, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire5" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(509, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire6" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(623, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="fire7" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.219608, 0.0627451, 1)
position = Vector2(734, 0)
scale = Vector2(1, 0.742424)
sprite_frames = SubResource("SpriteFrames_sy7en")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.0156863, 0, 0.109804)
position = Vector2(160, 460)
scale = Vector2(3.87931, 0.140449)
texture = ExtResource("7_x15js")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(497.5, 427)
shape = SubResource("RectangleShape2D_7ogwv")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_tk0dv")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
